// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > project should handle default state 1`] = `
Object {
  "currentProjectId": undefined,
  "projects": Array [],
}
`;

exports[`reducers > project should handle delete project 1`] = `
Object {
  "currentProjectId": undefined,
  "projects": Array [],
}
`;

exports[`reducers > project should handle delete regional analysis 1`] = `
Object {
  "regionalAnalyses": Array [
    Object {
      "_id": "efgh",
      "accessGroup": "accessGroupName",
      "bounds": Object {},
      "bundleId": "5678",
      "complete": true,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "creationTime": 20000,
      "cutoffMinutes": 60,
      "deleted": false,
      "grid": "Jobs_total",
      "height": 300,
      "name": "ANALYSIS 2",
      "nonce": "12345",
      "north": 20024,
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bikeTrafficStress": 4,
        "carSpeed": 20,
        "date": "2016-01-16",
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxCarTime": 45,
        "maxRides": 4,
        "maxWalkTime": 20,
        "minBikeTime": 10,
        "minCarTime": 10,
        "monteCarloDraws": 200,
        "reachabilityThreshold": 0,
        "streetTime": 90,
        "suboptimalMinutes": 5,
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "walkSpeed": 1.3888888888888888,
      },
      "scenarioId": "4321",
      "status": "DONE",
      "travelTimePercentile": 42,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variant": 1,
      "west": 20015,
      "width": 300,
      "workerVersion": "v3.2.0",
      "zoom": 9,
    },
  ],
}
`;

exports[`reducers > project should handle set all projects 1`] = `
Object {
  "currentProjectId": undefined,
  "projects": Array [
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "description": "Project description",
      "name": "Mock Project",
      "nonce": "12345",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
  ],
}
`;

exports[`reducers > project should handle set project 1`] = `
Object {
  "currentProjectId": "1",
  "projects": Array [
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "description": "Project description",
      "name": "Mock Project",
      "nonce": "12345",
      "opportunityDatasets": Array [
        Object {
          "dataSource": "lodes-data-2014",
          "key": "Workers_total",
          "name": "Workers total",
        },
      ],
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
  ],
}
`;
